--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -69,6 +69,7 @@ COPY --from=composer:lts /usr/bin/composer /usr/bin/composer
 RUN composer global require \
         phpunit/phpunit:^9.0 \
         squizlabs/php_codesniffer:^3.11 \
+        phpat/phpat:^0.10 \
     && composer global clear-cache
 
 # Add Composer global bin to PATH
