make phpat exec

--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -62,6 +62,10 @@ RUN pecl install redis \
 RUN pecl install swoole \
     && docker-php-ext-enable swoole
 
+# Install PCOV for code coverage (faster than Xdebug)
+RUN pecl install pcov \
+    && docker-php-ext-enable pcov
+
 # Get latest Composer
 COPY --from=composer:lts /usr/bin/composer /usr/bin/composer
 
@@ -70,7 +74,8 @@ RUN composer global require \
         phpunit/phpunit:^9.0 \
         squizlabs/php_codesniffer:^3.11 \
         phpat/phpat:^0.10 \
-    && composer global clear-cache
+    && composer global clear-cache \
+    && chmod +x /root/.composer/vendor/bin/*
 
 # Add Composer global bin to PATH
 ENV PATH="/root/.composer/vendor/bin:${PATH}"
