--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -66,29 +66,32 @@ RUN pecl install swoole \
 RUN pecl install pcov \
     && docker-php-ext-enable pcov
 
+# Create planhub user early
+RUN addgroup -g 1000 planhub \
+    && adduser -u 1000 -G planhub -s /bin/bash -D planhub
+
 # Get latest Composer
 COPY --from=composer:lts /usr/bin/composer /usr/bin/composer
 
-# Install global testing tools
+# Install global testing tools as planhub user
+USER planhub
 RUN composer global require \
         phpunit/phpunit:^9.0 \
         squizlabs/php_codesniffer:^3.11 \
         phpat/phpat:^0.10 \
-    && composer global clear-cache \
-    && chmod +x /root/.composer/vendor/bin/*
+    && composer global clear-cache
 
-# Add Composer global bin to PATH
-ENV PATH="/root/.composer/vendor/bin:${PATH}"
+# Switch back to root for remaining setup
+USER root
+
+# Add Composer global bin to PATH for planhub user
+ENV PATH="/home/planhub/.composer/vendor/bin:${PATH}"
 
 # Configure PHP for testing with more memory
 RUN echo "memory_limit=1G" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "max_execution_time=300" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "display_errors=On" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "log_errors=On" >> /usr/local/etc/php/conf.d/testing.ini
-
-# Create system user to run Composer and Artisan Commands
-RUN addgroup -g 1000 planhub \
-    && adduser -u 1000 -G planhub -s /bin/bash -D planhub
 
 # Create necessary directories with proper permissions
 RUN mkdir -p /app/storage/logs \
@@ -98,11 +101,9 @@ RUN mkdir -p /app/storage/logs \
              /app/bootstrap/cache \
     && chown -R planhub:planhub /app
 
-# Set proper permissions for the working directory
-RUN chown -R planhub:planhub /app
-
-# Switch to planhub user for security
+# Switch to planhub user for runtime
 USER planhub
+WORKDIR /app
 
 # Set environment variables for testing
 ENV APP_ENV=testing
@@ -114,4 +115,4 @@ ENV QUEUE_CONNECTION=sync
 ENV MAIL_MAILER=array
 
 # Default command - show available tools
-CMD ["bash", "-c", "echo '🧪 PlanHub API Testing Base Image' && echo 'Available tools:' && echo '- PHP:' $(php -v | head -1) && echo '- Composer:' $(composer --version) && echo '- PHPUnit:' $(phpunit --version) && echo '- PHPCS:' $(phpcs --version) && echo '' && echo 'Usage examples:' && echo '  docker run -v $(pwd):/app image-name composer install' && echo '  docker run -v $(pwd):/app image-name php artisan test' && echo '  docker run -v $(pwd):/app image-name phpcs --standard=planhubcs.xml'"]
+CMD ["bash", "-c", "echo '🧪 PlanHub API Testing Base Image' && echo 'Available tools:' && echo '- PHP:' $(php -v | head -1) && echo '- Composer:' $(composer --version) && echo '- PHPUnit:' $(phpunit --version) && echo '- PHPCS:' $(phpcs --version) && echo '- PHPat:' $(phpat --version) && echo '' && echo 'Usage examples:' && echo '  docker run -v $(pwd):/app image-name composer install' && echo '  docker run -v $(pwd):/app image-name php artisan test' && echo '  docker run -v $(pwd):/app image-name phpcs --standard=planhubcs.xml'"]
