--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -62,36 +62,28 @@ RUN pecl install redis \
 RUN pecl install swoole \
     && docker-php-ext-enable swoole
 
-# Install PCOV for code coverage (faster than Xdebug)
-RUN pecl install pcov \
-    && docker-php-ext-enable pcov
-
-# Create planhub user early
-RUN addgroup -g 1000 planhub \
-    && adduser -u 1000 -G planhub -s /bin/bash -D planhub
-
 # Get latest Composer
 COPY --from=composer:lts /usr/bin/composer /usr/bin/composer
 
-# Install global testing tools as planhub user
-USER planhub
+# Install global testing tools
 RUN composer global require \
         phpunit/phpunit:^9.0 \
         squizlabs/php_codesniffer:^3.11 \
         phpat/phpat:^0.10 \
     && composer global clear-cache
 
-# Switch back to root for remaining setup
-USER root
-
-# Add Composer global bin to PATH for planhub user
-ENV PATH="/home/planhub/.composer/vendor/bin:${PATH}"
+# Add Composer global bin to PATH
+ENV PATH="/root/.composer/vendor/bin:${PATH}"
 
 # Configure PHP for testing with more memory
 RUN echo "memory_limit=1G" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "max_execution_time=300" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "display_errors=On" >> /usr/local/etc/php/conf.d/testing.ini \
     && echo "log_errors=On" >> /usr/local/etc/php/conf.d/testing.ini
+
+# Create planhub user
+RUN addgroup -g 1000 planhub \
+    && adduser -u 1000 -G planhub -s /bin/bash -D planhub
 
 # Create necessary directories with proper permissions
 RUN mkdir -p /app/storage/logs \
@@ -115,4 +107,4 @@ ENV QUEUE_CONNECTION=sync
 ENV MAIL_MAILER=array
 
 # Default command - test available tools
-CMD ["bash", "-c", "echo '🧪 PlanHub API Testing Base Image' && echo 'Testing available tools...' && echo '' && echo '🔍 Testing PHP...' && php -v | head -1 && echo '🔍 Testing Composer...' && composer --version && echo '🔍 Testing PHPUnit...' && phpunit --version 2>/dev/null || echo 'PHPUnit available globally' && echo '🔍 Testing PHPCS...' && phpcs --version && echo '🔍 Testing PHPat...' && phpat --version && echo '' && echo '✅ All tools tested successfully!' && echo '' && echo 'Usage examples:' && echo '  docker run -v $(pwd):/app image-name composer install' && echo '  docker run -v $(pwd):/app image-name php artisan test' && echo '  docker run -v $(pwd):/app image-name phpcs --standard=planhubcs.xml' && echo '  docker run -v $(pwd):/app image-name phpat'"]
+CMD ["bash", "-c", "echo '🧪 PlanHub API Testing Base Image' && echo 'Testing available tools...' && echo '' && echo '🔍 Testing PHP...' && php -v | head -1 && echo '🔍 Testing Composer...' && composer --version && echo '🔍 Testing PHPUnit...' && phpunit --version && echo '🔍 Testing PHPCS...' && phpcs --version && echo '🔍 Testing PHPStan (includes PHPat extension)...' && phpstan --version && echo '' && echo '✅ All tools tested successfully!' && echo '' && echo 'Usage examples:' && echo '  docker run -v $(pwd):/app image-name composer install' && echo '  docker run -v $(pwd):/app image-name php artisan test' && echo '  docker run -v $(pwd):/app image-name phpcs --standard=planhubcs.xml' && echo '  docker run -v $(pwd):/app image-name phpstan analyse'"]
