--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -62,6 +62,10 @@ RUN pecl install redis \
 RUN pecl install swoole \
     && docker-php-ext-enable swoole
 
+# Install PCOV for code coverage (faster than Xdebug)
+RUN pecl install pcov \
+    && docker-php-ext-enable pcov
+
 # Get latest Composer
 COPY --from=composer:lts /usr/bin/composer /usr/bin/composer
 
