--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -83,8 +83,9 @@ RUN COMPOSER_HOME=/usr/local/composer composer global require \
 ENV PATH="/usr/local/composer/vendor/bin:${PATH}"
 
 # Install Deptrac for architecture testing
-RUN curl -LS https://github.com/qossmic/deptrac/releases/latest/download/deptrac.phar -o /usr/local/bin/deptrac \
-    && chmod +x /usr/local/bin/deptrac
+RUN curl -L https://github.com/qossmic/deptrac/releases/download/1.0.2/deptrac.phar -o /usr/local/bin/deptrac \
+    && chmod +x /usr/local/bin/deptrac \
+    && /usr/local/bin/deptrac --version
 
 # Configure PHP for testing with more memory
 RUN echo "memory_limit=1G" >> /usr/local/etc/php/conf.d/testing.ini \
