--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -110,6 +110,9 @@ jobs:
           echo "🔍 Testing Deptrac..."
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest deptrac --version
           
+          echo "🔍 Testing Graphviz..."
+          docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest dot -V
+          
           echo "🔍 Testing PCOV extension..."
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest php -m | grep pcov || (echo "❌ PCOV not found" && exit 1)
           
