--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -36,6 +36,8 @@ jobs:
           platforms: linux/amd64
           push: false
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:debug
+          build-args: |
+            COMPOSER_DEPS_REV=2
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
